[tool.poetry]
name = "bud_task"
version = "0.1.0"
description = ""
authors = ["josh-gree <joshua.greenhalgh@heyjobs.de>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
